--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/node": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2",
     "socket.io": "^4.0.0"
